--- a/measures/build.gradle
+++ b/measures/build.gradle
@@ -28,6 +28,7 @@ dependencies {
 
     compile 'dnsjava:dnsjava:2.1.7'
     compile 'com.google.code.gson:gson:2.8.0'
+
     testCompile 'junit:junit:4.12'
 }
 
@@ -42,6 +43,7 @@ task("javadoc", type: Javadoc) {
     }
     exclude '**/BuildConfig.java'
     exclude '**/R.java'
+    failOnError false
 }
 
 afterEvaluate {
