chores: remove snapshot from version

--- a/build.gradle
+++ b/build.gradle
@@ -30,7 +30,7 @@ ext.devs = [
 ]
 
 allprojects {
-    version = "1.0.0-SNAPSHOT"
+    version = "1.0.0"
     group = 'io.apisense.network'
 
     repositories {
