--- a/build.gradle
+++ b/build.gradle
@@ -32,7 +32,7 @@ ext.devs = [
 ]
 
 allprojects {
-    version = "1.0.0"
+    version = "1.1.0-SNAPSHOT"
     group = 'io.apisense.network'
 
     repositories {
